--- a/app/templates/medicos/nueva_nota.html
+++ b/app/templates/medicos/nueva_nota.html
@@ -102,13 +102,13 @@
         </div>
 
         <div class="form-group mt-2">
-            {{ form.plan.label("P-(Plan) Conducta a seguir: estudios, tratamientos, interconsultas, seguimiento.") }}
+            {{ form.plan.label }}
             {{ form.plan(class="form-control", rows=3) }}
             {% for error in form.plan.errors %}<small class="text-danger">{{ error }}</small>{% endfor %}
         </div>
 
         <div class="form-group mt-2">
-            {{ form.pronostico.label("Pronóstico: Predicción o estimación sobre la evolución y desenlace de la enfermedad de un paciente.") }}
+            {{ form.pronostico.label }}
             {{ form.pronostico(class="form-control", rows=2) }}
             {% for error in form.pronostico.errors %}<small class="text-danger">{{ error }}</small>{% endfor %}
         </div>
